--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "sqlite-async": "^1.1.2"
   },
   "devDependencies": {},
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
